Add OneToOne with SportHall and User

--- a/templates/pages/partner/new.html.twig
+++ b/templates/pages/partner/new.html.twig
@@ -1,12 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Partner
+{% block title %}Contrat
 {% endblock %}
 
 {% block body %}
-	<h1>Create new Partner</h1>
+	<div class="container mt-4">
+		<h1>Relier le  contrat du partenaire à son adresse mail.</h1>
 
-	{{ include('pages/partner/_form.html.twig') }}
+		<h2>Entrez le type de contrat et sélectionner la bonne adresse mail dans la liste.</h2>
 
-	<a href="{{ path('app_partner_index') }}">back to list</a>
+		<h3>Vous pouvez activer le compte si vous le souhaitez ou plus tard à votre convenance.
+		</h3>
+
+		{{ include('pages/partner/_form.html.twig') }}
+
+		<a class="btn btn-secondary btn-lg mt-4" href="{{ path('app_partner_index') }}">Retour à la liste</a>
+
+	</div>
+
 {% endblock %}
