--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -49,7 +49,10 @@
 							<div class="dropdown-menu">
 
 
-								<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport</a>
+								<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport Etape1</a>
+								<a class="dropdown-item" href="{{ path('app_usersporthall_index')}}">Ajout d'une Salle de Sport Etape2</a>
+
+
 								<a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Activer/désactiver les structures</a>
 								<a class="dropdown-item" href="{{ path('app_sporthallpermission_index')}}">Gérer les structures et les permissions</a>
 
@@ -105,8 +108,10 @@
 
 								<div class="dropdown-divider"></div>
 
+								<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport Etape1</a>
+								<a class="dropdown-item" href="{{ path('app_usersporthall_index')}}">Ajout d'une Salle de Sport Etape2</a>
 
-								<a class="dropdown-item" href="{{ path('app_register_sporthall')}}">Ajout d'une Salle de sport</a>
+
 								<a class="dropdown-item" href="{{ path('app_sporthall_index')}}">Activer/désactiver les structures</a>
 								<a class="dropdown-item" href="{{ path('app_sporthallpermission_index')}}">Gérer les structures et les permissions</a>
 
@@ -182,9 +187,9 @@
 			</ul>
 
 			{# <form class="d-flex">
-							<input class="form-control me-sm-2" type="text" placeholder="Search">
-							<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-						</form> #}
+																<input class="form-control me-sm-2" type="text" placeholder="Search">
+																<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+															</form> #}
 		</div>
 	</div>
 </nav>
