--- a/templates/pages/user/indexsporthall.html.twig
+++ b/templates/pages/user/indexsporthall.html.twig
@@ -32,7 +32,7 @@
 			{% for user in users %}
 				<tr>
 					<td>{{ user.id }}</td>
-					<td>{{ user.partners  }}</td>
+					<td>{{ user.sporthalls }}</td>
 					<td>{{ user.email }}</td>
 					<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
 					{# <td>{{ user.password }}</td> #}
@@ -43,13 +43,13 @@
 					<td>{{ user.createdAt ? user.createdAt|date('d-m-Y ') : '' }}</td>
 					<td>{{ user.contact }}</td>
 					{# {% for partner in user.partners %}
-																																																																							<td>{{ partner.contract }}</td>
-																																																																						{% endfor %} #}
+																																																																																						<td>{{ partner.contract }}</td>
+																																																																																					{% endfor %} #}
 
 					{# <td>
-																																																																																											<a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-																																																																																											<a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-																																																																																										</td> #}
+																																																																																																										<a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
+																																																																																																										<a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+																																																																																																									</td> #}
 				</tr>
 
 			{% else %}
@@ -64,9 +64,9 @@
 <div class="navigation d-flex justify-content-center mt-4">
 	{{ knp_pagination_render(users) }}
 </div>
-<div class="container mt-4">
-	<h2>Important</h2>
-	<h3>Pour respecter la marche à suivre</h3>
-	<p>Il faut relier le contrat à la bonne adresse mail du franchisé.</p>
-</div>
-<a class="btn btn-primary btn-lg mt-4" href="{{ path('app_partner_new') }}">Cliquer ici! Pour un franchisé</a></div>{% endblock %}
+
+<hr class="my-4">
+
+<h3>Pour respecter la marche à suivre</h3>
+<p>Il faut relier le contrat à la bonne adresse mail de la salle de sport.</p>
+<a class="btn btn-primary btn-lg mt-4" href="{{ path('app_sporthall_new') }}">Cliquer ici! Pour une salle de sport</a></div>{% endblock %}
