--- a/templates/pages/user/indexsporthall.html.twig
+++ b/templates/pages/user/indexsporthall.html.twig
@@ -10,7 +10,7 @@
 		<thead>
 			<tr>
 				<th>Id User</th>
-				<th>CONTRAT A RELIER</th>
+				{# <th>CONTRAT A RELIER</th> #}
 				<th>Email</th>
 				<th>Statut
 				</th>
@@ -32,7 +32,10 @@
 			{% for user in users %}
 				<tr>
 					<td>{{ user.id }}</td>
-					<td>{{ user.sporthalls }}</td>
+					{% for sporthall in user.sporthalls %}
+						<td>{{ sporthall.id }}</td>
+					{% endfor %}
+
 					<td>{{ user.email }}</td>
 					<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
 					{# <td>{{ user.password }}</td> #}
@@ -43,13 +46,13 @@
 					<td>{{ user.createdAt ? user.createdAt|date('d-m-Y ') : '' }}</td>
 					<td>{{ user.contact }}</td>
 					{# {% for partner in user.partners %}
-																																																																																						<td>{{ partner.contract }}</td>
-																																																																																					{% endfor %} #}
+																																																																																																																																								<td>{{ partner.contract }}</td>
+																																																																																																																																							{% endfor %} #}
 
 					{# <td>
-																																																																																																										<a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-																																																																																																										<a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-																																																																																																									</td> #}
+																																																																																																																																																												<a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
+																																																																																																																																																												<a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+																																																																																																																																																											</td> #}
 				</tr>
 
 			{% else %}
