Update show permission isenable

--- a/templates/pages/partner/indexpermission.html.twig
+++ b/templates/pages/partner/indexpermission.html.twig
@@ -33,7 +33,11 @@
 							{% for permission in partner.permissions %}
 
 								{{ permission.name }}
-								/
+								-(
+								{{ permission.isEnable ? 'Active' : 'Désactivée' }}
+								)-
+								
+																/
 
 							{% endfor %}
 						</td>
