--- a/templates/pages/permission/index.html.twig
+++ b/templates/pages/permission/index.html.twig
@@ -29,7 +29,7 @@
 					</tr>
 				{% else %}
 					<tr>
-						<td colspan="4">no records found</td>
+						<td colspan="4">Pas d'enregistrement</td>
 					</tr>
 				{% endfor %}
 			</tbody>
