--- a/templates/pages/sporthall/indexpermission.html.twig
+++ b/templates/pages/sporthall/indexpermission.html.twig
@@ -31,7 +31,10 @@
 							{% for permission in sporthall.permissions %}
 
 								{{ permission.name }}
-								/
+								-(
+								{{ permission.isEnable ? 'Active' : 'Désactivée' }}
+								)- /
+
 
 							{% endfor %}
 						</td>
