--- a/templates/pages/sporthall/index.html.twig
+++ b/templates/pages/sporthall/index.html.twig
@@ -36,7 +36,7 @@
 					</tr>
 				{% else %}
 					<tr>
-						<td colspan="4">no records found</td>
+						<td colspan="4">Aucun enregistrement</td>
 					</tr>
 				{% endfor %}
 			</tbody>
