--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -7,9 +7,9 @@
 	<div
 		class="container mt-4">
 		{# {% if  sporthall.isEnable == false %}
-																																																				
-																																																							<h3>Merci de votre inscription, nous traitons votre demande</h3>
-																																																						{% endif %} #}
+																																																						
+																																																									<h3>Merci de votre inscription, nous traitons votre demande</h3>
+																																																								{% endif %} #}
 
 
 		<div class="jumbotron">
@@ -21,7 +21,7 @@
 
 			<hr class="my-4">
 
-			<img src="{{ asset('assets/images/room.jpg')}}" alt="logo" style="max-width: 35rem;" class="mx-auto d-block">
+			<img src="{{ asset('assets/images/room.jpg')}}" alt="salle de sport" style="max-width: 35rem;" class="mx-auto d-block">
 			<hr class="my-4">
 
 			<h2>Vous êtes déjà membre et vous souhaiter profiter de vos services.</h2>
@@ -55,10 +55,10 @@
 					<input type="search" id="search" data-search>
 				</div>
 				<div class="user-cards mt-4" data-user-cards-container style="display: flex;flex-direction: row;
-																																																																																																																																																																											flex-wrap: wrap;
-																																																																																																																																																										justify-content: space-between;
-																																																																																																																																																										align-items: stretch;
-																																																																																																																																																																							align-content: space-around;"></div>
+																																																																																																																																																																																flex-wrap: wrap;
+																																																																																																																																																															justify-content: space-between;
+																																																																																																																																																															align-items: stretch;
+																																																																																																																																																																												align-content: space-around;"></div>
 
 				<template data-user-template>
 					<div class="card border-primary mb-3" style="width:300px;">
