--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -7,13 +7,14 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarColor01">
-			<ul class="navbar-nav me-auto">
-				<li class="nav-item">
-					<a class="nav-link active" href="{{ path('readme')}}">ReadMe
-
-						<span class="visually-hidden">(current)</span>
-					</a>
-				</li>
+			<ul
+				class="navbar-nav me-auto">
+				{# <li class="nav-item">
+									<a class="nav-link active" href="{{ path('readme')}}">ReadMe
+				
+										<span class="visually-hidden">(current)</span>
+									</a>
+								</li> #}
 
 				<li class="nav-item">
 					<a class="nav-link active" href="{{ path('app_contact')}}">Ouvrir une franchise
@@ -187,9 +188,9 @@
 			</ul>
 
 			{# <form class="d-flex">
-																<input class="form-control me-sm-2" type="text" placeholder="Search">
-																<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-															</form> #}
+																			<input class="form-control me-sm-2" type="text" placeholder="Search">
+																			<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+																		</form> #}
 		</div>
 	</div>
 </nav>
