--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,7 +33,7 @@
 		</form>
 	</div>
 
-	<img src="{{ asset('assets/images/room2.jpg')}}" alt="logo" style="max-width: 35rem;" class="mx-auto d-block">
+	<img src="{{ asset('assets/images/room2.jpg')}}" alt="salle de sport" style="max-width: 35rem;" class="mx-auto d-block">
 
 
 {% endblock %}
