--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!
+{% block title %}Connexion
 {% endblock %}
 
 {% block body %}
@@ -31,9 +31,13 @@
 				Valider
 			</button>
 		</form>
-	</div>
 
-	<img src="{{ asset('assets/images/room2.jpg')}}" alt="salle de sport" style="max-width: 35rem;" class="mx-auto d-block">
+		<hr class="my-4">
+
+
+		<img src="{{ asset('assets/images/room2.jpg')}}" alt="salle de sport" style="max-width: 35rem;" class="mx-auto d-block mt-4">
+
+	</div>
 
 
 {% endblock %}
