--- a/templates/pages/user/show.html.twig
+++ b/templates/pages/user/show.html.twig
@@ -1,72 +1,134 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User
+{% block title %}Mon compte
 {% endblock %}
 
 {% block body %}
+
+
 	<div class="container mt-4">
 		<h1>Mon Compte</h1>
 
-		<table class="table">
-			<tbody>
-				<tr>
-					<th>N°</th>
-					<td>{{ user.id }}</td>
-				</tr>
-				<tr>
-					<th>Email</th>
-					<td>{{ user.email }}</td>
-				</tr>
-				{# <tr>
-																																																					<th>Roles</th>
-																																																					<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-																																																				</tr> #}
-				{# <tr>
-																																																					<th>Password</th>
-																																																					<td>{{ user.password }}</td>
-																																																				</tr> #}
-				<tr>
-					<th>Société</th>
-					<td>{{ user.name }}</td>
-				</tr>
-				<tr>
-					<th>Adresse</th>
-					<td>{{ user.address }}</td>
-				</tr>
-				<tr>
-					<th>Code Postal</th>
-					<td>{{ user.zipcode }}</td>
-				</tr>
-				<tr>
-					<th>Ville</th>
-					<td>{{ user.city }}</td>
-				</tr>
-				{# <tr>
-																																																					<th>Created_at</th>
-																																																					<td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-																																																				</tr> #}
-				<tr>
-					<th>Contact</th>
-					<td>{{ user.contact }}</td>
-				</tr>
-				<tr>
-					<th>Options</th>
-					<td>
-						{% for permission in permissions %}
-							{{ permission.name }}
-							/
-						{% endfor %}
-					</td>
 
-				</tr>
+		{% if app.user %}
+			{% if is_granted('ROLE_SPORTHALL') %}
+				{% if  user.sporthalls.isEnable == false %}
+					<h3>Merci de votre inscription, nous traitons votre demande.</h3>
+				{% endif %}
+				{% if user.sporthalls.isEnable == true %}
+					<table class="table">
+						<tbody>
+							<tr>
+								<th>N°</th>
+								<td>{{ user.id }}</td>
+							</tr>
+							<tr>
+								<th>Email</th>
+								<td>{{ user.email }}</td>
+							</tr>
 
-			</tbody>
-		</table>
+							<tr>
+								<th>Société</th>
+								<td>{{ user.name }}</td>
+							</tr>
+							<tr>
+								<th>Adresse</th>
+								<td>{{ user.address }}</td>
+							</tr>
+							<tr>
+								<th>Code Postal</th>
+								<td>{{ user.zipcode }}</td>
+							</tr>
+							<tr>
+								<th>Ville</th>
+								<td>{{ user.city }}</td>
+							</tr>
+
+							<tr>
+								<th>Contact</th>
+								<td>{{ user.contact }}</td>
+							</tr>
+							<tr>
+								<th>Options</th>
+								<td>
+									{% for permission in permissions %}
+										{{ permission.name }}
+										-(
+										{{ permission.isEnable ? 'Active' : 'Désactivée' }}
+										)-
+																																																																																																																																																						/
+									{% endfor %}
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				{% endif %}
+			{% endif %}
+			{% if is_granted('ROLE_PARTNER') %}
+				{% if  user.partners.isEnable == false %}
+					<h3>Merci de votre inscription, nous traitons votre demande.</h3>
+				{% endif %}
+				{% if user.partners.isEnable == true %}
+					<table class="table">
+						<tbody>
+							<tr>
+								<th>N°</th>
+								<td>{{ user.id }}</td>
+							</tr>
+							<tr>
+								<th>Email</th>
+								<td>{{ user.email }}</td>
+							</tr>
+
+							<tr>
+								<th>Société</th>
+								<td>{{ user.name }}</td>
+							</tr>
+							<tr>
+								<th>Adresse</th>
+								<td>{{ user.address }}</td>
+							</tr>
+							<tr>
+								<th>Code Postal</th>
+								<td>{{ user.zipcode }}</td>
+							</tr>
+							<tr>
+								<th>Ville</th>
+								<td>{{ user.city }}</td>
+							</tr>
+
+							<tr>
+								<th>Contact</th>
+								<td>{{ user.contact }}</td>
+							</tr>
+							<tr>
+								<th>Options</th>
+								<td>
+									{% for permission in permissions %}
+										{{ permission.name }}
+										-(
+										<strong>{{ permission.isEnable ? 'Active' : 'Désactivée' }}</strong>
+
+										)-
+																																																																																																																																																													/
+									{% endfor %}
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				{% endif %}
+
+
+			{% endif %}
+
+
+		{% endif %}
+
 
 		<a href="{{ path('home.index') }}">Retour accueil</a>
 
 		{# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-																										
-																												{{ include('pages/user/_delete_form.html.twig') }}</div> #}
+																																																							
+																																																									{{ include('pages/user/_delete_form.html.twig') }}</div> #}
 
 	{% endblock %}
