--- a/templates/registration/register_sporthall.html.twig
+++ b/templates/registration/register_sporthall.html.twig
@@ -10,6 +10,8 @@
 
 	{{ form_start(registrationForm) }}
 	{{ form_row(registrationForm.name) }}
+	{{ form_row(registrationForm.partners) }}
+
 	{{ form_row(registrationForm.contact) }}
 
 	{{ form_row(registrationForm.address) }}
