--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -8,7 +8,8 @@
 
 		{% if app.user %}
 			{% if is_granted('ROLE_SPORTHALL') %}
-				{% if  app.user.sporthalls.isEnable == false %}
+				{% if  app.user.sporthalls.isEnable == false or  app.user.sporthalls.isEnable is not defined %}
+
 					<h3>Merci de votre inscription, nous traitons votre demande.</h3>
 				{% endif %}
 			{% endif %}
@@ -65,10 +66,10 @@
 					<input type="search" id="search" data-search>
 				</div>
 				<div class="user-cards mt-4" data-user-cards-container style="display: flex;flex-direction: row;
-																																																																																																																																																																																																																																																																																																																																	flex-wrap: wrap;
-																																																																																																																																																																																																																																																																																																																justify-content: space-between;
-																																																																																																																																																																																																																																																																																																																align-items: stretch;
-																																																																																																																																																																																																																																																																																																																													align-content: space-around;"></div>
+																																																																																																																																																																																																																																																																																																																																																										flex-wrap: wrap;
+																																																																																																																																																																																																																																																																																																																																									justify-content: space-between;
+																																																																																																																																																																																																																																																																																																																																									align-items: stretch;
+																																																																																																																																																																																																																																																																																																																																																						align-content: space-around;"></div>
 
 				<template data-user-template>
 					<div class="card border-primary mb-3" style="width:300px;">
