--- a/templates/pages/user/show.html.twig
+++ b/templates/pages/user/show.html.twig
@@ -12,7 +12,8 @@
 
 		{% if app.user %}
 			{% if is_granted('ROLE_SPORTHALL') %}
-				{% if  user.sporthalls.isEnable == false %}
+				{% if  user.sporthalls.isEnable == false or app.user.sporthalls.isEnable is not defined %}
+
 					<h3>Merci de votre inscription, nous traitons votre demande.</h3>
 				{% endif %}
 				{% if user.sporthalls.isEnable == true %}
@@ -56,7 +57,7 @@
 										-(
 										{{ permission.isEnable ? 'Active' : 'Désactivée' }}
 										)-
-																																																																																																																																																						/
+																																																																																																																																																																/
 									{% endfor %}
 								</td>
 							</tr>
@@ -110,7 +111,7 @@
 										<strong>{{ permission.isEnable ? 'Active' : 'Désactivée' }}</strong>
 
 										)-
-																																																																																																																																																													/
+																																																																																																																																																																							/
 									{% endfor %}
 								</td>
 							</tr>
@@ -128,7 +129,7 @@
 		<a href="{{ path('home.index') }}">Retour accueil</a>
 
 		{# <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-																																																							
-																																																									{{ include('pages/user/_delete_form.html.twig') }}</div> #}
+																																																									
+																																																											{{ include('pages/user/_delete_form.html.twig') }}</div> #}
 
 	{% endblock %}
